# mdbook-htmx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  wrangler.jsonc
.github/actions/cross-repo-sync/: README.md  action.yml
.github/workflows/: ci.yml  deploy-cloudflare.yml  docs-sync.yml  e2e-cross-repo-sync.yml  release.yml  test-cross-repo-sync.yml  test-deployments.yml
docker/: .env.example  Dockerfile.build  compose.search.yml  compose.yml  nginx-search.conf  nginx.conf
docs/: book.toml
docs/ci/: README.md  cross-repo-sync.md
docs/src/: README.md  SUMMARY.md
docs/src/adr/: 0001-unified-server.md  0002-canonical-book-json.md  0003-fragments-vs-pages.md  0004-search-index-design.md  0005-htmx-attribute-injection.md  0006-oob-updates.md  0007-auth-metadata-model.md  README.md
docs/src/advanced/: README.md  cicd.md  micro-frontends.md  server-integration.md  visual-testing.md
docs/src/concepts/: README.md  architecture.md  build-output.md  server-model.md  why-htmx.md
docs/src/configuration/: README.md  (+4 more)
src/: context.rs  error.rs  lib.rs  main.rs
src/assets/: mod.rs
src/config/: mod.rs
src/frontmatter/: mod.rs
src/manifest/: mod.rs
src/render/: htmx.rs  mod.rs  oob.rs
src/search/: mod.rs
src/templates/: mod.rs
templates/: 401.html  403.html  layout.html  nav.html
templates/docs/: fragment.html  page.html
templates/partials/: access-denied.html  breadcrumb.html  loading.html  search.html  sidebar-oob.html  signin.html
workers/: index.ts  package-lock.json  package.json  search.ts  tsconfig.json
(+40 files in other folders)
