[package]
name = "mdbook-htmx"
version = "0.1.0"
edition = "2021"
authors = ["aRustyDev"]
description = "HTMX-enhanced alternative backend for mdBook"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aRustyDev/mdbook-htmx"
keywords = ["mdbook", "htmx", "documentation", "hypermedia"]
categories = ["command-line-utilities", "template-engine", "web-programming"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tera = "1.19"
pulldown-cmark = "0.10"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"
base64 = "0.21"
walkdir = "2.4"
glob = "0.3"

[dev-dependencies]
proptest = "1.4"
rstest = "0.18"
insta = { version = "1.34", features = ["yaml", "redactions"] }
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
test-case = "3.3"

[features]
default = []
sqlite-search = ["rusqlite"]

[dependencies.rusqlite]
version = "0.31"
optional = true
features = ["bundled"]
